--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
-# Ignore environment variable files
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Environment
 .env
 .env.*
+
+# macOS
+.DS_Store
+
+# VSCode
+.vscode/
+
+# Logs
+logs
+*.log
+debug.log
+error.log
+
+# Coverage
+coverage/
+*.lcov
