--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["ai", "gemini", "outfit", "api"],
+  "keywords": [
+    "ai",
+    "gemini",
+    "outfit",
+    "api"
+  ],
   "author": "Bharat Kumar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
     "@google/genai": "^0.15.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "dotenv": "^16.3.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
