--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.34.3"
+  "multer": "^1.4.5-lts.1",
+  "sharp": "^0.34.3",
+  "fluent-ffmpeg": "^2.1.2",
+  "ffmpeg-static": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
